# nonebot-plugin-template

./: LICENSE  README.md  bot.py  pyproject.toml
.github/workflows/: pyright.yml
nonebot_plugin_template/: __init__.py  config.py
